--- a/App24/app/src/main/res/layout/activity_post_detail.xml
+++ b/App24/app/src/main/res/layout/activity_post_detail.xml
@@ -28,6 +28,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/txt_post_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLines="3"
@@ -107,6 +108,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/layout_feed_body"
                         android:layout_centerInParent="true"
+                        android:layout_toRightOf="@+id/txt_created_time"
                         android:drawableLeft="@drawable/seen"
                         android:drawablePadding="5dp"
                         android:text="3,027"
@@ -148,12 +150,21 @@
                         android:id="@+id/layout_media_preview"
                         android:layout_width="match_parent"
                         android:layout_height="275dp">
-                        <ImageView
-                            android:id="@+id/img_preview"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_centerHorizontal="true"
-                            android:gravity="fill"/>
+                        <FrameLayout android:layout_width="match_parent"
+                                     android:layout_height="match_parent">
+
+                            <ProgressBar
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"/>
+
+                            <ImageView
+                                android:id="@+id/img_preview"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_centerHorizontal="true"
+                                android:gravity="fill"/>
+                        </FrameLayout>
                         <RelativeLayout
                             android:id="@+id/layout_img_video_preview"
                             android:layout_width="match_parent"
@@ -165,6 +176,7 @@
                                 android:layout_height="50dp"
                                 android:layout_centerInParent="true"
                                 android:src="@drawable/video_preview_icon"
+                                android:visibility="gone"
                                 />
                         </RelativeLayout>
                     </RelativeLayout>
@@ -172,6 +184,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                         <TextView
+                            android:id="@+id/txt_description"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_alignParentLeft="true"
