--- a/App24/app/src/main/res/layout/activity_create_post.xml
+++ b/App24/app/src/main/res/layout/activity_create_post.xml
@@ -94,10 +94,12 @@
                     android:padding="@dimen/text_row_height"
                     android:src="@drawable/camera"/>
 
-                <!--<com.facebook.share.widget.ShareButton-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content" android:layout_alignParentBottom="true"-->
-                <!--android:layout_toEndOf="@+id/ibtn_select_image_from_gallery"/>-->
+                <com.facebook.share.widget.ShareButton
+                    android:id="@+id/shareButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_toEndOf="@+id/ibtn_select_image_from_gallery"/>
 
             </RelativeLayout>
         </RelativeLayout>
