--- a/App24/app/src/main/res/layout/fragment_posts.xml
+++ b/App24/app/src/main/res/layout/fragment_posts.xml
@@ -3,9 +3,11 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
-
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_user_feeds"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Posts"/>
+        android:clipToPadding="false"
+        android:scaleType="fitXY"
+        />
 </LinearLayout>
