--- a/App24/app/src/main/res/layout/grid_item_view.xml
+++ b/App24/app/src/main/res/layout/grid_item_view.xml
@@ -3,7 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/layout_selection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,6 +15,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/white"/>
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/iconView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/color_camera"
+            android:visibility="gone"/>
+    </RelativeLayout>
 
 </LinearLayout>
