--- a/App24/app/src/main/res/layout/user_profile_menu_bar.xml
+++ b/App24/app/src/main/res/layout/user_profile_menu_bar.xml
@@ -43,11 +43,15 @@
 
     <TextView
         android:id="@+id/txt_profile_header"
-        android:layout_width="?android:attr/actionBarSize"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:background="@android:color/transparent"
+        android:ellipsize="marquee"
+        android:fadingEdge="horizontal"
         android:gravity="center"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
         android:singleLine="true"
         android:text="@string/user_name"
         android:textAppearance="?android:textAppearanceMedium"
