--- a/App24/app/src/main/res/layout/activity_post_detail.xml
+++ b/App24/app/src/main/res/layout/activity_post_detail.xml
@@ -53,7 +53,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:text="@string/creator_name"
-                        android:textSize="10sp"/>
+                        android:textSize="@dimen/grey_heading_text"/>
 
                     <com.capstone.app24.custom.CustomTextView
                         android:id="@+id/txt_created_time"
@@ -62,7 +62,7 @@
                         android:layout_toRightOf="@+id/txt_creator"
                         android:paddingLeft="5dp"
                         android:text="@string/created_time"
-                        android:textSize="10sp"/>
+                        android:textSize="@dimen/grey_heading_text"/>
 
                     <!--<com.capstone.app24.custom.CustomTextView-->
                     <!--android:id="@+id/txt_profile_count_login_user"-->
@@ -112,7 +112,7 @@
                         android:drawableLeft="@drawable/seen"
                         android:drawablePadding="5dp"
                         android:text="3,027"
-                        android:textSize="10dp"/>
+                        android:textSize="@dimen/grey_heading_text"/>
                     <!--<com.facebook.share.widget.LikeView-->
                     <!--android:id="@+id/like_view"-->
                     <!--android:layout_width="wrap_content"-->
@@ -191,6 +191,7 @@
                             android:layout_alignParentTop="true"
                             android:gravity="fill_horizontal|right"
                             android:isScrollContainer="false"
+                            android:lineSpacingMultiplier="1.2"
                             android:maxEms="18"
                             android:text="@string/lorem_ipsum"
                             android:textColor="@color/black"
