--- a/App24/app/src/main/res/layout/view_profit_and_feeds_with_image.xml
+++ b/App24/app/src/main/res/layout/view_profit_and_feeds_with_image.xml
@@ -44,7 +44,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:text="@string/creator_name"
-            android:textColor="@color/text_small_blue"/>
+            android:textColor="@color/text_small_blue"
+            android:textSize="@dimen/grey_heading_text"/>
 
         <TextView
             android:id="@+id/txt_created_time"
@@ -53,7 +54,8 @@
             android:layout_toRightOf="@+id/txt_creator"
             android:paddingLeft="5dp"
             android:text="@string/created_time"
-            android:textColor="@color/text_small_blue"/>
+            android:textColor="@color/text_small_blue"
+            android:textSize="@dimen/grey_heading_text"/>
 
         <TextView
             android:id="@+id/txt_profile_count_login_user"
@@ -62,7 +64,8 @@
             android:layout_alignParentRight="true"
             android:paddingBottom="10dp"
             android:text="@string/profile_count_login_user"
-            android:textColor="@color/text_small_blue"/>
+            android:textColor="@color/text_small_blue"
+            android:textSize="@dimen/grey_heading_text"/>
     </RelativeLayout>
 
     <LinearLayout
@@ -84,6 +87,7 @@
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:gravity="center_vertical|left"
+                android:lineSpacingMultiplier="1.2"
                 android:maxLines="5"
                 android:text="@string/chinese_lorem_ipsum"
                 android:textSize="@dimen/feed_body_text"/>
@@ -149,7 +153,7 @@
         android:drawablePadding="5dp"
         android:padding="@dimen/main_screen_padding"
         android:text="3,027"
-        android:textSize="12dp"/>
+        android:textSize="@dimen/grey_heading_text"/>
 
     <View
         android:layout_width="match_parent"
