Add like and comment count

--- a/App24/app/src/main/res/layout/activity_post_detail.xml
+++ b/App24/app/src/main/res/layout/activity_post_detail.xml
@@ -40,44 +40,65 @@
 
                 <RelativeLayout
                     android:id="@+id/layout_feed_details"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_below="@+id/layout_post_detail_heading"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
                     android:gravity="center_vertical">
 
-                    <com.capstone.app24.custom.CustomTextView
+                    <TextView
                         android:id="@+id/txt_creator"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:ellipsize="marquee"
+                        android:fadingEdge="horizontal"
+                        android:gravity="center"
+                        android:lines="1"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:scrollHorizontally="true"
+                        android:singleLine="true"
                         android:text="@string/creator_name"
                         android:textSize="@dimen/grey_heading_text"/>
 
-                    <com.capstone.app24.custom.CustomTextView
+                    <TextView
                         android:id="@+id/txt_created_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="5dp"
                         android:layout_toRightOf="@+id/txt_creator"
-                        android:paddingLeft="5dp"
+                        android:singleLine="true"
                         android:text="@string/created_time"
                         android:textSize="@dimen/grey_heading_text"/>
+                    <RelativeLayout
+                        android:id="@+id/comment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toLeftOf="@+id/like_view"
+                        android:background="@drawable/round_rect_shape">
+                        <ImageView
+                            android:id="@+id/img_comment"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:padding="2dp"
+                            android:src="@drawable/comment"/>
+                        <TextView
+                            android:id="@+id/txt_comment"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginRight="5dp"
+                            android:layout_toRightOf="@+id/img_comment"
+                            android:padding="2dp"
+                            android:text="0"
+                            android:textColor="@color/fb_color"
+                            android:textSize="15sp"/>
+                    </RelativeLayout>
 
-                    <!--<com.capstone.app24.custom.CustomTextView-->
-                    <!--android:id="@+id/txt_profile_count_login_user"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginRight="5dp"-->
-                    <!--android:layout_toLeftOf="@+id/fb_likes"-->
-                    <!--android:background="@drawable/round_rect_shape"-->
-                    <!--android:drawableLeft="@drawable/comment"-->
-                    <!--android:drawablePadding="2dp"-->
-                    <!--android:padding="2dp"-->
-                    <!--android:text="28"-->
-                    <!--android:textColor="@color/fb_color"-->
-                    <!--android:textSize="10sp"/>-->
-                    <!--<com.capstone.app24.custom.CustomTextView-->
                     <!--android:id="@+id/fb_likes"-->
                     <!--android:layout_width="wrap_content"-->
                     <!--android:layout_height="wrap_content"-->
@@ -105,12 +126,13 @@
                     <TextView
                         android:id="@+id/txt_seen"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/layout_feed_body"
+                        android:layout_height="match_parent"
                         android:layout_centerInParent="true"
-                        android:layout_toRightOf="@+id/txt_created_time"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@+id/txt_created_time"
                         android:drawableLeft="@drawable/seen"
                         android:drawablePadding="5dp"
+                        android:singleLine="true"
                         android:text="3,027"
                         android:textSize="@dimen/grey_heading_text"/>
                     <!--<com.facebook.share.widget.LikeView-->
@@ -138,6 +160,28 @@
                     <!--app:calloutMarker="left"-->
                     <!--/>-->
                     <!--</com.shamanland.facebook.likebutton.FacebookLikePlugin>-->
+                    <!--<com.facebook.share.widget.ShareButton-->
+                    <!--android:id="@+id/shareButton"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_toRightOf="@+id/txt_seen"-->
+                    <!--android:singleLine="true"/>-->
+                    <com.facebook.share.widget.LikeView
+                        android:id="@+id/like_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toStartOf="@+id/like_count">
+                    </com.facebook.share.widget.LikeView>
+                    <TextView
+                        android:id="@+id/like_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="2dp"
+                        android:text="0"/>
                 </RelativeLayout>
 
 
