--- a/App24/app/src/main/res/layout/activity_create_post.xml
+++ b/App24/app/src/main/res/layout/activity_create_post.xml
@@ -96,8 +96,8 @@
 
                 <com.facebook.share.widget.ShareButton
                     android:id="@+id/shareButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_alignParentBottom="true"
                     android:layout_toEndOf="@+id/ibtn_select_image_from_gallery"/>
 
