--- a/App24/app/src/main/res/layout/view_profit_and_feeds_with_image.xml
+++ b/App24/app/src/main/res/layout/view_profit_and_feeds_with_image.xml
@@ -73,7 +73,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_feed_details"
-        android:gravity="center_vertical" android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:padding="@dimen/main_screen_padding">
         <RelativeLayout
             android:layout_width="match_parent"
