--- a/App24/app/src/main/res/layout/activity_post_detail.xml
+++ b/App24/app/src/main/res/layout/activity_post_detail.xml
@@ -255,6 +255,12 @@
         android:layout_below="@+id/menu_layout"
         android:layout_marginTop="-10dp"
         android:visibility="gone"/>
+
+    <com.facebook.share.widget.ShareButton
+        android:id="@+id/shareButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_alignParentBottom="true"/>
     <!-- <ImageView
          android:id="@+id/ad"
          android:layout_width="match_parent"
