Resolved forever loding issue

--- a/App24/app/src/main/res/layout/activity_post_detail.xml
+++ b/App24/app/src/main/res/layout/activity_post_detail.xml
@@ -97,6 +97,7 @@
                             android:id="@+id/txt_comment"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
                             android:layout_marginRight="5dp"
                             android:layout_toRightOf="@+id/img_comment"
                             android:padding="2dp"
@@ -111,6 +112,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_alignTop="@+id/comment"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="5dp"
                         android:layout_toStartOf="@+id/comment"
                         android:drawableLeft="@drawable/seen"
                         android:drawablePadding="5dp"
@@ -127,14 +130,15 @@
                     </com.facebook.share.widget.LikeView>
                     <Button
                         android:id="@+id/like"
-                        android:layout_width="60dp"
-                        android:layout_height="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="25dp"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="5dp"
                         android:layout_toStartOf="@+id/like_count"
                         android:background="@color/fb_color"
                         android:drawableLeft="@drawable/fb"
                         android:paddingLeft="5dp"
+                        android:singleLine="true"
                         android:text="Like"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
