--- a/App24/app/src/main/res/layout/fragment_user_profile_details.xml
+++ b/App24/app/src/main/res/layout/fragment_user_profile_details.xml
@@ -3,7 +3,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
-
+    <include
+        android:id="@+id/profit_details"
+        layout="@layout/view_user_profit_details"
+        android:visibility="visible"/>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
