Add language file

--- a/App24/app/src/main/res/layout/activity_create_post.xml
+++ b/App24/app/src/main/res/layout/activity_create_post.xml
@@ -77,7 +77,7 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:gravity="left"
-                    android:hint="Whats in your mind"
+                    android:hint="@string/whats_in_your_mind"
                     android:isScrollContainer="true"
                     android:lines="5"
                     android:overScrollMode="ifContentScrolls"
