--- a/App24/app/src/main/res/layout/activity_about.xml
+++ b/App24/app/src/main/res/layout/activity_about.xml
@@ -22,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_marginBottom="30dp"
-                android:text="About"
+                android:text="@string/about"
                 android:textColor="@color/black"/>
             <TextView
                 android:id="@+id/about_sub_heading"
