--- a/App24/app/src/main/res/layout/activity_comment.xml
+++ b/App24/app/src/main/res/layout/activity_comment.xml
@@ -31,7 +31,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/profile_pic"
                 android:background="@drawable/rect_corners_edit_text"
-                android:hint="write a comment..."
+                android:hint="@string/write_a_comment"
                 android:isScrollContainer="true"
                 android:maxLines="2"
                 android:padding="5dp"
@@ -59,11 +59,12 @@
             android:background="@color/colorPrimary"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="Post Comment"
+            android:text="@string/write_a_comment"
             android:textColor="@color/white"/>
     </RelativeLayout>
     <View
-        android:id="@+id/seperator" android:layout_width="match_parent"
+        android:id="@+id/seperator"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_below="@+id/layout_comment_count"
         android:layout_marginTop="5dp"
