--- a/App24/app/src/main/res/layout/view_comment_items.xml
+++ b/App24/app/src/main/res/layout/view_comment_items.xml
@@ -21,7 +21,7 @@
             android:layout_toLeftOf="@+id/comment_time"
             android:layout_toRightOf="@+id/img_comment_creator_pic"
             android:singleLine="true"
-            android:text="title"
+            android:text="@string/title"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/txt_comment_description"
@@ -30,13 +30,13 @@
             android:layout_below="@+id/txt_comment_creator"
             android:layout_toRightOf="@+id/img_comment_creator_pic"
             android:padding="5dp"
-            android:text="comment description"/>
+            android:text="@string/comment_description"/>
         <TextView
             android:id="@+id/comment_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="Just now"/>
+            android:text="@string/just_now"/>
 
     </RelativeLayout>
 
